--- a/res/layout/activity_manage_sales.xml
+++ b/res/layout/activity_manage_sales.xml
@@ -88,7 +88,8 @@
              android:ems="10"
              android:textSize="14sp"
              android:textColor="#000000"
-             android:background="@drawable/white_text_box_small" />
+             android:background="@drawable/white_text_box_small" 
+             android:inputType="text"/>
 
         <TextView
             android:id="@+id/textView5"
@@ -109,7 +110,9 @@
 	        android:ems="10"
 	        android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
-	        android:textSize="14sp" />
+	        android:textSize="14sp"
+	        android:inputType="text" />
+        
     </LinearLayout>
     
     <LinearLayout
@@ -128,7 +131,8 @@
             android:textColor="#ffffff"
             android:textSize="14sp"
             android:text="거래처"
-            android:textAppearance="?android:attr/textAppearanceSmall"/>
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            />
 
         <EditText
             android:id="@+id/editTextCustomerCode"
@@ -138,7 +142,7 @@
             android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
             android:textSize="14sp"
-            android:inputType="number"
+            android:inputType="text"
             android:ems="10"/>
 
         <EditText
@@ -150,7 +154,7 @@
             android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
             android:textSize="14sp"
-            android:inputType="number"
+            android:inputType="text"
             android:ems="10" />
     </LinearLayout>
         
@@ -428,9 +432,8 @@
                     android:orientation="vertical"
                      >
 
-				    
                     <CalendarView android:id="@+id/calendarView1"
-				            android:layout_height="250dip"
+				            android:layout_height="180dip"
 				            android:layout_width="match_parent"
 				            android:showWeekNumber="false"
 				            			            
@@ -445,6 +448,7 @@
 				 
 				    <!-- ListView (grid_items) -->
 				    <LinearLayout android:id="@+id/layout4"
+				        android:layout_marginTop="10dp"
 				        android:layout_width="match_parent"
 				        android:layout_height="fill_parent"
 				        >
