--- a/res/layout/activity_charge_customer_detail.xml
+++ b/res/layout/activity_charge_customer_detail.xml
@@ -13,7 +13,8 @@
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:gravity="center" >
          
         <TextView
             android:id="@+id/textView2"
@@ -22,18 +23,18 @@
             android:layout_weight="0.45"
             android:textColor="#ffffff"
             android:textSize="14sp"
-            android:text="기간 : "
+            android:text="날짜"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
-        <EditText
-            android:id="@+id/editTextPeriod1"
+        <TextView
+            android:id="@+id/textViewPeriod1"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
             android:textSize="14sp"
-            android:inputType="date" />
+            />
 
         <requestFocus />
 
@@ -49,15 +50,15 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             />
 
-        <EditText
-            android:id="@+id/editTextPeriod2"
+        <TextView
+            android:id="@+id/textViewPeriod2"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
             android:textSize="14sp"
-            android:inputType="date" />
+             />
 	        
 	</LinearLayout>
 	
@@ -69,38 +70,38 @@
         android:layout_below="@+id/linearLayout2"
         android:orientation="horizontal" >
 
-        <TextView
-            android:id="@+id/textView6"
+         <TextView
+            android:id="@+id/textView1"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_weight="0.42"
+            android:layout_weight="0.6"
             android:textColor="#ffffff"
             android:textSize="14sp"
-            android:text="거래처"
+            android:text="거래처명 : "
             android:textAppearance="?android:attr/textAppearanceSmall"/>
-
-        <EditText
-            android:id="@+id/editTextCustomerCode"
-            android:layout_width="0dip"
+        
+         <TextView
+             android:id="@+id/textViewCustomerCode"
+             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textColor="#000000"
-            android:background="@drawable/white_text_box_small"
+            android:textColor="#ffffff"
             android:textSize="14sp"
-            android:inputType="number"
-            android:ems="10"/>
-
-        <EditText
-            android:id="@+id/editTextCustomerName"
-            android:layout_width="0dip"
+             android:text="xxxxxx "
+             android:layout_marginLeft="5dip"
+             android:textAppearance="?android:attr/textAppearanceSmall" />
+         
+         <TextView
+             android:id="@+id/textViewCustomerName"
+             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginLeft="5dp"
-            android:textColor="#000000"
-            android:background="@drawable/white_text_box_small"
+            android:textColor="#ffffff"
             android:textSize="14sp"
-            android:inputType="number"
-            android:ems="10" />
+             android:text="xxxxxx "
+             android:layout_marginLeft="5dip"
+             android:textAppearance="?android:attr/textAppearanceSmall" />
+         
     </LinearLayout>
     
     <LinearLayout android:id="@+id/header1"
@@ -255,9 +256,7 @@
 	        />
 	</LinearLayout>
  
-        
-        
-	<LinearLayout android:id="@+id/header3"
+    <LinearLayout android:id="@+id/header3"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:layout_marginTop="5dip"
@@ -298,11 +297,11 @@
 	        />
 	</LinearLayout>
 	
-        <LinearLayout android:id="@+id/linearContent3"
+    <LinearLayout android:id="@+id/linearContent3"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:layout_marginTop="5dip"
-        android:layout_below="@id/header2" >
+        android:layout_below="@id/header3" >
                  
             <TextView android:id="@+id/content7"
 	            android:layout_height="fill_parent"
