--- a/res/layout/activity_manage_stock.xml
+++ b/res/layout/activity_manage_stock.xml
@@ -25,15 +25,15 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textSize="14sp" />
 
-        <EditText
-            android:id="@+id/editTextStockDate"
-            android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="#000000"
-            android:background="@drawable/white_text_box_small"
-            android:textSize="14sp"
-            android:inputType="date" />
+        <Button
+             android:id="@+id/buttonSetDate1"
+             style="?android:attr/buttonStyleSmall"
+             android:layout_width="0dip"
+             android:layout_height="wrap_content"
+             android:layout_weight="1"
+             android:textSize="14sp"
+             android:text="2013-05-19"
+             android:onClick="onClickSetDate1" />
                  
          <requestFocus />
     </LinearLayout>
@@ -117,7 +117,7 @@
             android:layout_weight="1"
             android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
-            android:inputType="text"
+            android:inputType="number"
             android:ems="10"
             android:textSize="14sp"  />
         
@@ -139,7 +139,7 @@
             android:layout_weight="1"
             android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
-            android:inputType="text"
+            android:inputType="number"
             android:ems="10"
             android:textSize="14sp"  
 	     />       
@@ -223,7 +223,8 @@
 	        android:layout_height="wrap_content"
 	        android:layout_marginLeft="10dip"
 	        android:scaleY="0.75"
-	        android:background="@drawable/change_btn" />
+	        android:background="@drawable/change_btn"
+	        android:onClick="onClickModify" />
        
        <Button
 	        android:id="@+id/buttonRenew"
@@ -320,14 +321,14 @@
     <!-- ListView (grid_items) -->
     <LinearLayout android:id="@+id/layout"
         android:layout_width="match_parent"
-        android:layout_height="240dp"
+        android:layout_height="220dp"
         android:layout_below="@+id/header"
         >
 
         <ListView
             android:id="@+id/listviewReadyToSendEventList"
             android:layout_width="fill_parent"
-            android:layout_height="240dp"
+            android:layout_height="220dp"
             >
 
         </ListView>
