--- a/res/layout/activity_config.xml
+++ b/res/layout/activity_config.xml
@@ -54,6 +54,9 @@
 	        android:layout_above="@+id/buttonLogin"
 	        android:layout_alignLeft="@+id/buttonLogin"
 	        android:layout_marginBottom="10dp"
+	        android:paddingLeft="10dp"
+	        android:paddingRight="10dp"
+	        android:textColor="#000000"
 	        android:background="@drawable/intro_text_box"
 	        android:ems="20"
 	        android:inputType="textPassword" />
@@ -78,6 +81,9 @@
 	        android:layout_above="@+id/editTextLoginPW"
 	        android:layout_alignLeft="@+id/editTextLoginPW"
 	        android:layout_marginBottom="5dp"
+	        android:paddingLeft="10dp"
+	        android:paddingRight="10dp"
+	        android:textColor="#000000"
 	        android:background="@drawable/intro_text_box"
 	        android:ems="20"
 	        android:inputType="text" />
