--- a/res/layout/activity_config_detail.xml
+++ b/res/layout/activity_config_detail.xml
@@ -1,187 +1,208 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ConfigDetailActivity" >
-
-    <TextView
-        android:id="@+id/textViewShopIP"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textViewShopTitle"
-        android:layout_marginTop="19dp"
-        android:text="@string/mobile_phone_number"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textViewShopIP"
-        android:layout_alignBottom="@+id/textViewShopIP"
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="17dp"
-        android:layout_toRightOf="@+id/textViewShopIP"
-        android:text="@string/sample_number"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView7"
-        android:layout_below="@+id/editText4"
-        android:layout_marginTop="22dp"
-        android:text="@string/PW"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textViewShopIP"
-        android:layout_below="@+id/textViewShopIP"
-        android:layout_marginTop="14dp"
-        android:text="@string/IP"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <EditText
-        android:id="@+id/editTextCustomerCode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView4"
-        android:layout_alignBottom="@+id/textView4"
-        android:layout_alignRight="@+id/textView3"
-        android:ems="10"
-        android:inputType="text" />
-     <requestFocus />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView4"
-        android:layout_below="@+id/editTextCustomerCode"
-        android:layout_marginTop="20dp"
-        android:text="@string/port"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <EditText
-        android:id="@+id/editTextManagerName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView5"
-        android:layout_alignBottom="@+id/textView5"
-        android:layout_alignLeft="@+id/editTextCustomerCode"
-        android:ems="10"
-        android:inputType="text" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView5"
-        android:layout_below="@+id/editTextManagerName"
-        android:layout_marginTop="20dp"
-        android:text="@string/PosID"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <EditText
-        android:id="@+id/editText3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView6"
-        android:layout_alignBottom="@+id/textView6"
-        android:layout_alignLeft="@+id/editTextManagerName"
-        android:ems="10"
-        android:background="@drawable/white_text_box_small"
-        android:textColor="#000000"
-        android:inputType="text" >
-
-       
-    </EditText>
-
-    <EditText
-        android:id="@+id/editText4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView7"
-        android:layout_alignBottom="@+id/textView7"
-        android:layout_alignLeft="@+id/editText3"
-        android:ems="10"
-        android:background="@drawable/white_text_box_small"
-        android:textColor="#000000"
-        android:inputType="text" />
-
-    <EditText
-        android:id="@+id/editText5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView8"
-        android:layout_alignBottom="@+id/textView8"
-        android:layout_alignLeft="@+id/editText4"
-        android:ems="10"
-        android:background="@drawable/white_text_box_small"
-        android:textColor="#000000"
-        android:inputType="textPassword" />
+    android:padding="10dp"
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/textViewShopTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editTextCustomerCode"
-        android:layout_alignParentTop="true"
+        android:layout_marginTop="19dp"        
+	    android:gravity="center"
         android:text="@string/ConfigDetailTitle"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+    
+    <LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:gravity="center"
+	    android:layout_marginTop="20dp"
+	    android:orientation="horizontal" >
+	    
+	    <TextView
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:text="@string/mobile_phone_number"
+	        android:textAppearance="?android:attr/textAppearanceMedium" />
+	
+	    <TextView
+	        android:id="@+id/textViewPhoneNumber"
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:text="@string/sample_number"
+	        android:textAppearance="?android:attr/textAppearanceMedium" />
+	        
+    </LinearLayout>
+    
+    <!-- IP -->
+    <LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:gravity="center"
+	    android:layout_marginTop="10dp"
+	    android:orientation="horizontal" >
+	    
+	    <TextView
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:text="@string/IP"
+	        android:textAppearance="?android:attr/textAppearanceMedium" />
+	
+	    <EditText
+	        android:id="@+id/editTextShopIP"
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="2"
+	        android:ems="10"
+	        android:inputType="text" />
 
+    </LinearLayout>
+    
+    <!-- PORT -->
+    <LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:gravity="center"
+	    android:layout_marginTop="10dp"
+	    android:orientation="horizontal" >
+	    
+	    <TextView
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:text="@string/port"
+	        android:textAppearance="?android:attr/textAppearanceMedium" />
+	
+	    <EditText
+	        android:id="@+id/editTextShopPort"
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="2"
+	        android:ems="10"
+	        android:inputType="text" />
+	    
+    </LinearLayout>
+    
+    
+    <!-- Pos ID -->
+    <LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:gravity="center"
+	    android:layout_marginTop="10dp"
+	    android:orientation="horizontal" >
+	    
+	    <TextView
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:text="@string/PosID"
+	        android:textAppearance="?android:attr/textAppearanceMedium" />
+	
+	    <EditText
+	        android:id="@+id/editTextPosID"
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="2"
+	        android:ems="10"
+	        android:inputType="text" />
+    </LinearLayout>
+    
     <CheckBox
-        android:id="@+id/checkBox1"
+        android:id="@+id/checkBoxAutoLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_below="@+id/editText3"
         android:layout_marginTop="14dp"
         android:text="@string/auto_login" />
+    
+    
+    <!-- ID -->
+    <LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:gravity="center"
+	    android:layout_marginTop="10dp"
+	    android:orientation="horizontal" >
+	    
+	    <TextView
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:text="@string/ID"
+	        android:textAppearance="?android:attr/textAppearanceMedium" />
+	    
+	    <EditText
+	        android:id="@+id/editTextID"
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="2"
+	        android:paddingLeft="10dp"
+	        android:paddingRight="10dp"
+	        android:ems="10"
+	        android:background="@drawable/white_text_box_small"
+	        android:textColor="#000000"
+	        android:inputType="text" />
+    </LinearLayout>
+    
+    
+    <!-- PW -->
+    <LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:gravity="center"
+	    android:layout_marginTop="10dp"
+	    android:orientation="horizontal" >
+	    
+	    <TextView
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:text="@string/PW"
+	        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView6"
-        android:layout_below="@+id/checkBox1"
-        android:layout_marginTop="18dp"
-        android:text="@string/ID"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+	    <EditText
+	        android:id="@+id/editTextPW"
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="2"
+	        android:paddingLeft="10dp"
+	        android:paddingRight="10dp"
+	        android:ems="10"
+	        android:background="@drawable/white_text_box_small"
+	        android:textColor="#000000"
+	        android:inputType="textPassword" />
+    </LinearLayout>
+    
+    <requestFocus />
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textViewShopIP"
-        android:layout_toRightOf="@+id/textView5"
-        android:background="@drawable/icon_stting" />
+    <LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:gravity="center"
+	    android:layout_marginTop="10dp"
+	    android:padding="10dp"
+	    android:orientation="horizontal" >
+	    
+	    <Button
+	        android:id="@+id/buttonCancel"
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:layout_marginRight="10dp"
+	        android:background="@drawable/contact_btn_cancel" />
+	
+	    <Button
+	        android:id="@+id/buttonSave"
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:background="@drawable/contact_btn_save" />
+	    
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/buttonCancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/buttonDefaultMagage"
-        android:layout_alignBottom="@+id/buttonDefaultMagage"
-        android:layout_alignRight="@+id/editText5"
-        android:background="@drawable/contact_btn_cancel" />
-
-    <Button
-        android:id="@+id/buttonDefaultMagage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView8"
-        android:layout_below="@+id/textView8"
-        android:layout_marginTop="36dp"
-        android:background="@drawable/contact_btn_save" />
-
-</RelativeLayout>
+</LinearLayout>
