--- a/res/layout/activity_select_shop.xml
+++ b/res/layout/activity_select_shop.xml
@@ -20,6 +20,7 @@
         android:id="@+id/listShops"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:choiceMode="singleChoice"
         android:layout_below="@id/textViewShopTitle" >
         
     </ListView>
