--- a/res/layout/activity_config_detail.xml
+++ b/res/layout/activity_config_detail.xml
@@ -103,14 +103,23 @@
 	        android:layout_weight="1"
 	        android:text="@string/PosID"
 	        android:textAppearance="?android:attr/textAppearanceMedium" />
-	
+	<!--  
 	    <EditText
 	        android:id="@+id/editTextPosID"
 	        android:layout_width="0dp"
 	        android:layout_height="wrap_content"
 	        android:layout_weight="2"
 	        android:ems="10"
-	        android:inputType="text" />
+	        android:inputType="text" />-->
+	    
+	    <Spinner
+	        android:id="@+id/spinnerPosID"
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:entries="@array/group_type"
+	        android:prompt="@string/choose_default_group_type"
+	        android:textSize="14sp" />
     </LinearLayout>
     
     <CheckBox
