--- a/res/layout/activity_payment_detail_view.xml
+++ b/res/layout/activity_payment_detail_view.xml
@@ -27,7 +27,7 @@
             android:textAppearance="?android:attr/textAppearanceSmall"/>
         
          <TextView
-             android:id="@+id/textView3"
+             android:id="@+id/textViewCustomerName"
              android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -57,7 +57,7 @@
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <EditText
-            android:id="@+id/editTextPeriod1"
+            android:id="@+id/textViewPeriod1"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -81,7 +81,7 @@
             />
 
         <EditText
-            android:id="@+id/editTextPeriod2"
+            android:id="@+id/textViewPeriod2"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
