--- a/res/layout/activity_purchase_payment_status.xml
+++ b/res/layout/activity_purchase_payment_status.xml
@@ -99,7 +99,7 @@
             android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
             android:textSize="14sp"
-            android:inputType="number"
+            android:inputType="text"
             android:ems="10" />
     </LinearLayout>
 
@@ -129,6 +129,7 @@
              android:ems="10"
              android:textSize="14sp"
              android:textColor="#000000"
+             android:inputType="text"
              android:background="@drawable/white_text_box_small" />
 
         <TextView
@@ -149,6 +150,7 @@
 	        android:layout_weight="1"
 	        android:ems="10"
 	        android:textColor="#000000"
+	        android:inputType="text"
             android:background="@drawable/white_text_box_small"
 	        android:textSize="14sp" />
     </LinearLayout>
