--- a/res/layout/activity_manage_product.xml
+++ b/res/layout/activity_manage_product.xml
@@ -31,12 +31,21 @@
              android:layout_width="0dip"
              android:layout_height="wrap_content"
              android:layout_weight="1"
+		     android:singleLine="true"
+		     android:lines="1"
              android:ems="10"
-             android:textSize="14sp"
+             android:textSize="12sp"
              android:textColor="#000000"
              android:background="@drawable/white_text_box_small" />
          
          <requestFocus />
+         
+         <Button
+	        android:id="@+id/buttonBarcode"
+	        android:layout_width="28dp"
+	        android:layout_height="28dp"
+	        android:layout_marginLeft="5dp"
+	        android:background="@drawable/search_btn" />
 	        
          <TextView
              android:id="@+id/textView3"
