--- a/res/layout/activity_customer_purchase_payment_detail.xml
+++ b/res/layout/activity_customer_purchase_payment_detail.xml
@@ -27,7 +27,7 @@
             android:textAppearance="?android:attr/textAppearanceSmall"/>
         
          <TextView
-             android:id="@+id/textView3"
+             android:id="@+id/textViewCustomerName"
              android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -44,7 +44,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_below="@id/linearLayoutTitle"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:gravity="center" >
          
         <TextView
             android:id="@+id/textView2"
@@ -56,15 +57,14 @@
             android:text="기간 : "
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
-        <EditText
-            android:id="@+id/editTextPeriod1"
+        <TextView
+            android:id="@+id/textViewPeriod1"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
-            android:textSize="14sp"
-            android:inputType="date" />
+            android:textSize="14sp" />
 
         <requestFocus />
 
@@ -80,15 +80,65 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             />
 
-        <EditText
-            android:id="@+id/editTextPeriod2"
+        <TextView
+            android:id="@+id/textViewPeriod2"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
+            android:textSize="14sp" />
+	        
+	</LinearLayout>
+	
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/linearLayout2"
+        android:orientation="horizontal" >
+         
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"
+            android:textColor="#ffffff"
             android:textSize="14sp"
-            android:inputType="date" />
+            android:text="순매입 : "
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <TextView
+            android:id="@+id/textViewRealPurchase"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="#ffffff"
+            android:textSize="14sp"/>
+
+        <requestFocus />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.7"
+            android:layout_marginLeft="5dp"
+            android:textColor="#ffffff"
+            android:textSize="14sp"
+            android:text="순매출 : "
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            />
+
+        <TextView
+            android:id="@+id/textViewRealPayment"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="#000000"
+            android:textSize="14sp"
+             />
 	        
 	</LinearLayout>
 
@@ -98,7 +148,7 @@
        android:layout_width="fill_parent"
        android:layout_marginTop="10dip"
        android:orientation="horizontal"
-       android:layout_below="@id/linearLayout2"
+       android:layout_below="@id/linearLayout3"
        >
         <TextView android:id="@+id/item1"
             android:layout_height="fill_parent"
