행사관리쪽 수정중

--- a/res/layout/activity_manage_event.xml
+++ b/res/layout/activity_manage_event.xml
@@ -153,6 +153,14 @@
             android:ems="10"
             android:textSize="14sp"  />
         
+         <Button
+	        android:id="@+id/buttonBarcode"
+	        android:layout_width="28dp"
+	        android:layout_height="28dp"
+	        android:layout_marginLeft="5dp"
+	        android:background="@drawable/search_btn"
+            android:onClick="onBarcodeSearch" />
+        
         <TextView
             android:id="@+id/textView6"
             android:layout_width="0dip"
@@ -423,7 +431,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dip"
-            android:background="@drawable/purchase_send_btn" />
+            android:text="전체삭제"/>
 
         <Button
             android:id="@+id/buttonDelete"
