--- a/res/layout/activity_purchase_detail.xml
+++ b/res/layout/activity_purchase_detail.xml
@@ -32,7 +32,7 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textColor="#ffffff"
+            android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
             android:textSize="14sp"
             android:inputType="number"
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginLeft="5dp"
-            android:textColor="#ffffff"
+            android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
             android:textSize="14sp"
             android:inputType="number"
