--- a/res/layout/activity_charge_customer_detail.xml
+++ b/res/layout/activity_charge_customer_detail.xml
@@ -104,10 +104,40 @@
          
     </LinearLayout>
     
+    <LinearLayout
+        android:id="@+id/linearLayout4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/linearLayout3"
+        android:orientation="horizontal" >
+
+         <CheckBox
+             android:id="@+id/checkBoxIsCashDeduction"
+             android:layout_width="0dip"
+             android:layout_height="wrap_content"
+             android:layout_weight="0.7"
+             android:textSize="14sp"
+             android:text="현금영수증 공제 (%)" />
+
+         <EditText
+             android:id="@+id/editTextCashDeduction"
+             android:layout_width="0dip"
+             android:layout_height="wrap_content"
+             android:layout_marginLeft="5dip"
+             android:layout_weight="0.45"
+             android:background="@drawable/white_text_box_small"
+             android:ems="10"
+             android:inputType="number"
+             android:textColor="#000000"
+             android:textSize="14sp" />
+         
+    </LinearLayout>
+    
     <LinearLayout android:id="@+id/header1"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
-        android:layout_below="@id/linearLayout3"
+        android:layout_below="@id/linearLayout4"
         android:layout_marginTop="10dp" >
                  
             <TextView android:id="@+id/item1"
