--- a/res/layout/activity_purchase_payment_status.xml
+++ b/res/layout/activity_purchase_payment_status.xml
@@ -88,6 +88,7 @@
             android:background="@drawable/white_text_box_small"
             android:textSize="14sp"
             android:inputType="number"
+            android:singleLine="true"
             android:ems="10"/>
 
         <EditText
@@ -100,6 +101,7 @@
             android:background="@drawable/white_text_box_small"
             android:textSize="14sp"
             android:inputType="text"
+            android:singleLine="true"
             android:ems="10" />
     </LinearLayout>
 
@@ -130,6 +132,7 @@
              android:textSize="14sp"
              android:textColor="#000000"
              android:inputType="text"
+             android:singleLine="true"
              android:background="@drawable/white_text_box_small" />
 
         <TextView
@@ -151,6 +154,7 @@
 	        android:ems="10"
 	        android:textColor="#000000"
 	        android:inputType="text"
+	        android:singleLine="true"
             android:background="@drawable/white_text_box_small"
 	        android:textSize="14sp" />
     </LinearLayout>
