거래처, 바코드 검색버튼 모두 추가

--- a/res/layout/activity_manage_sales.xml
+++ b/res/layout/activity_manage_sales.xml
@@ -91,6 +91,14 @@
              android:background="@drawable/white_text_box_small" 
              android:inputType="text"
              android:singleLine="true"/>
+        
+         <Button
+	        android:id="@+id/buttonBarcode"
+	        android:layout_width="28dp"
+	        android:layout_height="28dp"
+	        android:layout_marginLeft="5dp"
+	        android:background="@drawable/search_btn"
+            android:onClick="onBarcodeSearch" />
 
         <TextView
             android:id="@+id/textView5"
@@ -147,6 +155,14 @@
             android:inputType="text"
             android:ems="10"
             android:singleLine="true"/>
+        
+         <Button
+	        android:id="@+id/buttonCustomer"
+	        android:layout_width="28dp"
+	        android:layout_height="28dp"
+	        android:layout_marginLeft="5dp"
+	        android:background="@drawable/search_btn"
+            android:onClick="onCustomerSearch" />
 
         <EditText
             android:id="@+id/editTextCustomerName"
