--- a/res/layout/activity_purchase_payment_status.xml
+++ b/res/layout/activity_purchase_payment_status.xml
@@ -110,6 +110,10 @@
             android:textSize="14sp"
             android:inputType="text"
             android:singleLine="true"
+	        android:clickable="false" 
+		    android:cursorVisible="false" 
+		    android:focusable="false" 
+		    android:focusableInTouchMode="false"
             android:ems="10" />
     </LinearLayout>
 
@@ -170,6 +174,10 @@
 	        android:ems="10"
 	        android:textColor="#000000"
 	        android:inputType="text"
+	        android:clickable="false" 
+		    android:cursorVisible="false" 
+		    android:focusable="false" 
+		    android:focusableInTouchMode="false"
 	        android:singleLine="true"
             android:background="@drawable/white_text_box_small"
 	        android:textSize="14sp" />
@@ -194,6 +202,16 @@
             android:scaleY="0.8"
 	        android:background="@drawable/basic_inquiry_btn"
 	        android:onClick="OnClickSearch"/>
+        
+       <Button
+	        android:id="@+id/buttonRenew"
+	        style="?android:attr/buttonStyleSmall"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginLeft="10dip"
+	        android:scaleY="0.8"
+	        android:background="@drawable/replace_btn"
+	        android:onClick="OnClickRenew" />
 			
     </LinearLayout>
     
