--- a/res/layout/activity_manage_event.xml
+++ b/res/layout/activity_manage_event.xml
@@ -180,7 +180,11 @@
             android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
             android:inputType="text"
-            android:ems="10"
+            android:ems="10"            
+	        android:clickable="false" 
+		    android:cursorVisible="false" 
+		    android:focusable="false" 
+		    android:focusableInTouchMode="false"
             android:textSize="14sp"  
 	     />       
     
