--- a/res/layout/activity_manage_product.xml
+++ b/res/layout/activity_manage_product.xml
@@ -48,7 +48,8 @@
 	        android:layout_width="28dp"
 	        android:layout_height="28dp"
 	        android:layout_marginLeft="5dp"
-	        android:background="@drawable/search_btn" />
+	        android:background="@drawable/search_btn"
+	        android:onClick="onBarcodeSearch" />
 	        
          <TextView
              android:id="@+id/textView3"
@@ -67,9 +68,14 @@
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1"
 	        android:ems="10"
+	        android:clickable="false" 
+		    android:cursorVisible="false" 
+		    android:focusable="false" 
+		    android:focusableInTouchMode="false"
 	        android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
-	        android:textSize="14sp" />
+	        android:textSize="14sp"
+	        android:singleLine="true" />
              
 
     </LinearLayout>
@@ -101,8 +107,16 @@
              android:ems="10"
              android:textColor="#000000"
              android:background="@drawable/white_text_box_small"
-             android:textSize="14sp" />
+             android:textSize="14sp"
+             android:singleLine="true" />
 	        
+         <Button
+	        android:id="@+id/buttonCustomer"
+	        android:layout_width="28dp"
+	        android:layout_height="28dp"
+	        android:layout_marginLeft="5dp"
+	        android:background="@drawable/search_btn"
+            android:onClick="onCustomerSearch" />
         
          <EditText
 	        android:id="@+id/editTextCustomerName"
@@ -111,9 +125,14 @@
             android:layout_weight="1"
             android:layout_marginLeft="5dp"
 	        android:ems="10"
+	        android:clickable="false" 
+		    android:cursorVisible="false" 
+		    android:focusable="false" 
+		    android:focusableInTouchMode="false"
 	        android:textColor="#000000"
             android:background="@drawable/white_text_box_small"
-	        android:textSize="14sp" />
+	        android:textSize="14sp"
+	        android:singleLine="true" />
     
     </LinearLayout>
     
