--- a/res/layout/activity_manage_stock.xml
+++ b/res/layout/activity_manage_stock.xml
@@ -95,7 +95,11 @@
             android:background="@drawable/white_text_box_small"
             android:inputType="text"
             android:ems="10"
-            android:textSize="14sp"  
+            android:textSize="14sp"              
+	        android:clickable="false" 
+		    android:cursorVisible="false" 
+		    android:focusable="false" 
+		    android:focusableInTouchMode="false"
 	     />       
     
     </LinearLayout>
